update team controller